@@ -3,6 +3,7 @@
 	* logview.c (logview_copy): Handle multiple lines selection.
 	(logview_select_all): New. Add a "Select All" menu item.
 	(logview_menus_set_state): Insensitize "Select All" when monitoring.
+	Add a separator before the "Find" menu item.
 
 	* log_repaint.c (handle_selection_changed_cb): Allow the selection
 	of multiple log lines.
